# RipTide_compiler

./: CMakeLists.txt  LICENSE  README.md  mat_mul.c  rebuild.sh
compiler/: ControlflowGraph.cpp  CustomDataFlowGraph.cpp  CustomDataFlowGraph.h  DataflowGraph.cpp  EnforceMem.cpp  EnforceMemOrderPass.cpp  UnconditionalBranchRemoverPass.cpp
example/: mat_mul.c
test/: mat_mul.c  mat_mul_ir.ll  simple_ops.c  simple_ops.ll  simple_ops_ir.ll  simpler_ops.c  simpler_ops.ll  test_active.c  test_active.ll  test_active_mem_enforced.ll  test_cfg.c  test_cfg.ll  test_mem.ll  test_mem_after.ll  test_mem_enforce.c
visualizer/: README.md  dfg.dot  visualizer.py
